new changes in main.js with  functions

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <option>5</option>
             <option>6</option>
         </select>
-        <input type="text" name="apuesta" title="¿Cuánto apuestas?"/>
+        <input type="text" name="apuesta" title="¿Cuánto apuestas?" class="js-input"/>
         
         <button class="button js-btn" aria-placeholder="Que número apuestas del 1 al 6">Jugar</button> <!--ELEMENTO JS-->
     </form>
