new changes in main css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/main.css">
     <title>Módulo 2 Evaluación Intermedia Noelia Romero García</title>
+  
 </head>
 <body>
-    <main>
-<h2>Datos y Apuestas</h2>
-<p>Introduce aquí tu jugada:</p>
+    <main class="main">
+<h2 class="h2">Datos y Apuestas</h2>
+<p class="p">Introduce aquí tu jugada:</p>
 <div>
     <form class="form" action="">
         <select class="select js-select" name="" id=""> <!--ELEMENTO JS-->
@@ -21,14 +23,14 @@
             <option>5</option>
             <option>6</option>
         </select>
-        <input type="text" name="apuesta" title="¿Cuánto apuestas?" class="js-input"/>
+        <input type="text" name="apuesta" title="¿Cuánto apuestas?" placeholder="¿Cuanto apuestas?" class="js-input"/>
         
-        <button class="button js-btn" aria-placeholder="Que número apuestas del 1 al 6">Jugar</button> <!--ELEMENTO JS-->
+        <button class="button js-btn" placeholder="Que número apuestas del 1 al 6">Jugar</button> <!--ELEMENTO JS-->
     </form>
 </div>
 
 <h3 class="js-title">Vamos a Jugar!</h3>
-<p>Saldo: 50</p>
+<p class="p">Saldo: 50</p>
 
 
     </main>
