changes in main-css in button and select

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <div>
     <form class="form" action="">
         <select class="select js-select" name="" id=""> <!--ELEMENTO JS-->
+            <option selected>Qué número apuestas del 1 al 6</option>
             <option>1</option>
             <option>2</option>
             <option>3</option>
