final change with the required part for intermediate evaluation module 2

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </select>
         <input type="text" name="apuesta" title="¿Cuánto apuestas?" placeholder="¿Cuanto apuestas?" class="js-input"/>
         
-        <button class="button js-btn" placeholder="Que número apuestas del 1 al 6">Jugar</button> <!--ELEMENTO JS-->
+        <button class="button js-btn">Jugar</button> <!--ELEMENTO JS-->
     </form>
 </div>
 
