7/10 task to some improvements are done in this issues

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 <h2 class="h2">Datos y Apuestas</h2>
 <p class="p">Introduce aquí tu jugada:</p>
 <div>
-    <form class="form" action="">
-        <select class="select js-select" name="" id=""> <!--ELEMENTO JS-->
-            <option selected>Qué número apuestas del 1 al 6</option>
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-            <option>6</option>
+    <form class="form">
+        <select class="select js-select" name="select"> <!--ELEMENTO JS-->
+            <option value="selected">Qué número apuestas del 1 al 6</option>
+            <option value="value">1</option>
+            <option value="value">2</option>
+            <option value="value">3</option>
+            <option value="value">4</option>
+            <option value="value">5</option>
+            <option value="value">6</option>
         </select>
         <input type="text" name="apuesta" title="¿Cuánto apuestas?" placeholder="¿Cuanto apuestas?" class="js-input"/>
         
@@ -35,6 +35,6 @@
 
 
     </main>
-    <script src="./main.js"></script>
+    <script src="./javascript/main.js"></script>
 </body>
 </html>
