new changes in javascript

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main class="main">
-<h1 class="h2">Datos y Apuestas</h1>
+<h1 class="h2">Datos y Apuestas 🎲</h1>
 <p class="p">Introduce aquí tu jugada:</p>
 <div>
     <form class="form">
@@ -33,13 +33,11 @@
     </form>
 </div>
 <div>
-    <h3 class="js_result">Vamos a Jugar!</h3>
+    <h3 class="js_result">¡Vamos a Jugar!</h3>
 </div>
-
-    <div>
+<!-- <div>
         <p class="p js_saldo input">Saldo: 50</p>
-    </div>
-
+    </div>     -->
     <div class="">
     <p class="js_winner input"></p>
   </div>
